syntax = "proto3";

option go_package = "/proto;proto";

package notifications;

service NotificationService {
  rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc ClearNotification (ClearNotificationRequest) returns (ClearNotificationResponse);
  rpc ClearAllNotifications (ClearAllNotificationsRequest) returns (ClearAllNotificationsResponse);
}

message GetNotificationsRequest {
  string user_id = 1;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

message Notification {
  string id = 1;
  string message = 2;
  string created_at = 3;
}

message ClearNotificationRequest {
  string notification_id = 1;
}

message ClearNotificationResponse {
  string message = 1;
}

message ClearAllNotificationsRequest {
  string user_id = 1;
}

message ClearAllNotificationsResponse {
  string message = 1;
}
